KERNEL_H = \
	$(top_srcdir)/include/os/freebsd/zfs/sys/freebsd_crypto.h \
	$(top_srcdir)/include/os/freebsd/zfs/sys/zfs_dir.h \
	$(top_srcdir)/include/os/freebsd/zfs/sys/zfs_vnops.h \
        $(top_srcdir)/include/os/freebsd/zfs/sys/zpl.h \
	$(top_srcdir)/include/os/freebsd/zfs/sys/zfs_ctldir.h \
        $(top_srcdir)/include/os/freebsd/zfs/sys/zfs_vfsops.h \
	$(top_srcdir)/include/os/freebsd/zfs/sys/zfs_znode.h



