KERNEL_H = \
	$(top_srcdir)/include/os/linux/zfs/sys/zfs_ctldir.h \
	$(top_srcdir)/include/os/linux/zfs/sys/zfs_vfsops.h \
	$(top_srcdir)/include/os/linux/zfs/sys/zfs_znode.h \
	$(top_srcdir)/include/os/linux/zfs/sys/policy.h \
	$(top_srcdir)/include/os/linux/zfs/sys/zfs_dir.h \
	$(top_srcdir)/include/os/linux/zfs/sys/zfs_vnops.h \
	$(top_srcdir)/include/os/linux/zfs/sys/zpl.h 

